--- a/templates/capsula.html
+++ b/templates/capsula.html
@@ -3,8 +3,14 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./static/css/output.css">
-      <link rel="stylesheet" href="./static/css/customStyles.css">
+      <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='/css/output.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='/css/customStyles.css') }}"
+    />
       <title>Выбор пола</title>
    </head>
    <body class="bg-customWhite">
@@ -25,7 +31,7 @@
   
       <!-- Menu Icon -->
       <div class="text-3xl cursor-pointer mr-10">
-        <img src="./static/assets/img/svg/burger-menu.svg" alt="">
+        <img src="{{ url_for('static', filename= 'assets/img/svg/burger-menu.svg') }}" alt="">
       </div>
     </header>
   
@@ -42,7 +48,7 @@
 
       <!-- Model Image -->
       <div class="absolute right-10 top-0 w-auto h-screen flex items-center justify-end">
-          <img src="./static/assets/img/png/capsula.png" alt="Model" class="object-cover">
+          <img src="{{ url_for('static', filename= 'assets/img/png/capsula.png') }}" alt="Model" class="object-cover">
       </div>
       
   </main>
@@ -76,7 +82,7 @@
               <h3 class="text-xl mb-4 border-b border-white inline-block oswald-weight-medium">Получить услугу</h3>
               <div class="flex items-center bg-white rounded-full overflow-hidden mb-4">
                   <div class="flex-1 flex items-center pl-4">
-                      <img src="./static/assets/img/svg/lupa.svg" alt="Search" class="w-5 h-5">
+                      <img src="{{ url_for('static', filename= 'assets/img/svg/lupa.svg') }}" alt="Search" class="w-5 h-5">
                       <input type="text" placeholder="Найти стилиста для услуги..." 
                              class="w-full px-3 py-2 oswald-weight-medium text-black focus:outline-none">
                   </div>
@@ -100,8 +106,8 @@
       <!-- Нижняя часть футера -->
       <div class="container mx-auto px-4 mt-8 flex justify-between items-center">
           <div class="flex gap-4">
-              <a href="#"><img src="./static/assets/img/svg/vk-logo.svg" alt="VK" class="w-6 h-6"></a>
-              <a href="#"><img src="./static/assets/img/svg/tg-logo.svg" alt="Telegram" class="w-6 h-6"></a>
+              <a href="#"><img src="{{ url_for('static', filename= 'assets/img/svg/lupa.svg') }}" alt="VK" class="w-6 h-6"></a>
+              <a href="#"><img src="{{ url_for('static', filename= 'assets/img/svg/tg-logo.svg') }}" alt="Telegram" class="w-6 h-6"></a>
           </div>
           <p class="text-base oswald-weight-medium">Copyright © RUSSIA 2024. Все права защищены</p>
       </div>
