--- a/templates/season.html
+++ b/templates/season.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/output.css">
-    <link rel="stylesheet" href="./static/css/customStyles.css">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='/css/output.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='/css/customStyles.css') }}"
+    />
     <title>Выбор стиля</title>
 </head>
 <body class="bg-gray-200">
@@ -14,7 +20,7 @@
         <div class="w-full max-w-4xl">
             <!-- Logo Section -->
             <div class="flex justify-start items-start pb-5">
-                <img src="./static/assets/img/svg/logo.svg" alt="Логотип">
+                <img src="{{ url_for('static', filename= 'assets/img/svg/logo.svg') }}" alt="Логотип">
             </div>
 
             <!-- Question Section -->
@@ -49,14 +55,14 @@
                 <div class="flex justify-end mt-10">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='previousPage.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
+                            <img src="{{ url_for('static', filename= 'assets/img/png/prev.png') }}" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='confirmStyle.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
+                            <img src="{{ url_for('static', filename= 'assets/img/png/next.png') }}" alt="">
                         </button>
                     </div>
                 </div>
@@ -68,7 +74,7 @@
             <div class="w-full h-8 bg-customBlack"></div>
 
             <div class="absolute right-28 top-72">
-                <img src="./static/assets/img/png/janna-full.png" alt="">
+                <img src="{{ url_for('static', filename= 'assets/img/png/janna-full.png') }}" alt="">
             </div>
         </div>
     </main>
