--- a/templates/skin1.html
+++ b/templates/skin1.html
@@ -3,8 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/output.css">
-        <link rel="stylesheet" href="./static/css/customStyles.css">
+        <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='/css/output.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='/css/customStyles.css') }}"
+    />
         <title>Document</title>
      </head>
      <body class="bg-customGray">
@@ -14,47 +20,47 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="./static/assets/img/svg/logo.svg" alt="">
+                    <img src="{{ url_for('static', filename= 'assets/img/svg/logo.svg') }}" alt="">
                 </div>
 
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
 
                     <div class="flex justify-center items-center">
-                        <img src="./static/assets/img/png/skin1.png" alt="Логотип" class="max-w-full h-auto">
+                        <img src="{{ url_for('static', filename= 'assets/img/png/skin1.png') }}" alt="Логотип" class="max-w-full h-auto">
                     </div>
 
                     <div class="absolute top-10 right-64">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                        <img src="{{ url_for('static', filename= 'assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState" name="likeCheckboxState" value="false">
                     </div>
 
                     <div class="absolute top-10 left-64">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                        <img src="{{ url_for('static', filename= 'assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState" name="likeCheckboxState" value="false">
                     </div>
 
                     <div class="absolute top-72 left-64">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                        <img src="{{ url_for('static', filename= 'assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState" name="likeCheckboxState" value="false">
                     </div>
 
                     <div class="absolute top-64 right-64">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                        <img src="{{ url_for('static', filename= 'assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState" name="likeCheckboxState" value="false">
                     </div>
 
                     <div class="absolute top-48 right-96">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                        <img src="{{ url_for('static', filename= 'assets/img/svg/likeWhite.svg') }}" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState" name="likeCheckboxState" value="false">
                     </div>
@@ -62,14 +68,14 @@
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                             <button onclick="window.location.href='previousPage.html'">
-                                <img src="./static/assets/img/png/prev.png" alt="">
+                                <img src="{{ url_for('static', filename= 'assets/img/png/prev.png') }}" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
                             <button onclick="window.location.href='skin2.html'">
-                                <img src="./static/assets/img/png/next.png" alt="">
+                                <img src="{{ url_for('static', filename= 'assets/img/png/next.png') }}" alt="">
                             </button>
                         </div>
                     </div>
@@ -82,7 +88,7 @@
                         <p>Как вам образ?</p>
                     </div>
 
-                    <img src="./static/assets/img/png/janna-skin1.png" alt="">
+                    <img src="{{ url_for('static', filename= 'assets/img/png/janna-skin1.png') }}" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
