--- a/templates/skin4.html
+++ b/templates/skin4.html
@@ -18,35 +18,36 @@
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
+                    <form method="post">
+                        <div class="flex justify-center items-center">
+                            <img src="./static/assets/img/png/skin4.png" alt="Логотип" class="max-w-full h-auto">
+                        </div>
 
-                    <div class="flex justify-center items-center">
-                        <img src="./static/assets/img/png/skin4.png" alt="Логотип" class="max-w-full h-auto">
-                    </div>
+                        <div class="absolute top-10 right-64">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                            <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="like1">
+                        </div>
 
-                    <div class="absolute top-10 right-64">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
-                        <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="false">
-                    </div>
+                        <div class="absolute top-10 left-72">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                            <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="like2">
+                        </div>
 
-                    <div class="absolute top-10 left-72">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
-                        <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="false">
-                    </div>
+                        <div class="absolute top-72 left-72">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                            <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="like3">
+                        </div>
 
-                    <div class="absolute top-72 left-72">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
-                        <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="false">
-                    </div>
+                        <div class="absolute top-52 right-96">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                            <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="like4">
+                        </div>
 
-                    <div class="absolute top-52 right-96">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
-                        <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="false">
-                    </div>
-
-                    <div class="absolute top-72 right-64">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
-                        <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="false">
-                    </div>
+                        <div class="absolute top-72 right-64">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                            <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="like5">
+                        </div>
+                    </form>
 
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
@@ -57,12 +58,11 @@
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
-                            <button onclick="window.location.href='skin5.html'">
+                            <button onclick="window.location.href='/skin5'">
                                 <img src="./static/assets/img/png/next.png" alt="">
                             </button>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="absolute right-28 top-72">
