--- a/templates/skin5.html
+++ b/templates/skin5.html
@@ -18,51 +18,50 @@
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
-
-                    <div class="flex justify-center items-center">
-                        <img src="./static/assets/img/png/janna-skin5.png" alt="Логотип" class="max-w-full h-auto">
-                    </div>
-
-                    <div class="absolute top-10 right-64">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
-                        <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="false">
-                    </div>
-
-                    <div class="absolute top-10 left-72">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
-                        <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="false">
-                    </div>
-
-                    <div class="absolute top-72 left-72">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
-                        <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="false">
-                    </div>
-
-                    <div class="absolute top-52 right-96">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
-                        <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="false">
-                    </div>
-
-                    <div class="absolute top-72 right-64">
-                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
-                        <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="false">
-                    </div>
-
-                    <div class="flex justify-end mt-6">
-                        <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button onclick="window.location.href='skin4.html'">
-                                <img src="./static/assets/img/png/prev.png" alt="">
-                            </button>
-                            
-                            <!-- Separator -->
-                            <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                            
-                            <button onclick="window.location.href='skin6.html'">
-                                <img src="./static/assets/img/png/next.png" alt="">
-                            </button>
+                    <form method="post" action="/submit-likes">
+                        <div class="flex justify-center items-center">
+                            <img src="./static/assets/img/png/janna-skin5.png" alt="Логотип" class="max-w-full h-auto">
                         </div>
-                    </div>
 
+                        <div class="absolute top-10 right-64">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                            <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="face">
+                        </div>
+
+                        <div class="absolute top-10 left-72">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                            <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="hair">
+                        </div>
+
+                        <div class="absolute top-72 left-72">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                            <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="dress">
+                        </div>
+
+                        <div class="absolute top-52 right-96">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                            <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="accessories">
+                        </div>
+
+                        <div class="absolute top-72 right-64">
+                            <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                            <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="overall">
+                        </div>
+
+                        <div class="flex justify-end mt-6">
+                            <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                                <button onclick="window.location.href='/skin4'">
+                                    <img src="./static/assets/img/png/prev.png" alt="">
+                                </button>
+                                
+                                <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                                
+                                <button onclick="window.location.href='/skin6'">
+                                    <img src="./static/assets/img/png/next.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="absolute right-28 top-72">
