--- a/templates/skin6.html
+++ b/templates/skin6.html
@@ -18,47 +18,51 @@
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
-
-                    <div class="flex justify-center items-center">
-                        <img src="/assets/img/png/skin6.png" alt="Логотип" class="max-w-full h-auto">
-                    </div>
-
-                    <div class="absolute top-10 right-64">
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
-                        <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="false">
-                    </div>
-
-                    <div class="absolute top-32 left-96">
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
-                    </div>
-
-                    <div class="absolute top-56 left-72">
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
-                    </div>
-
-                    <div class="absolute top-64 left-96">
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
-                    </div>
-
-                    <div class="absolute top-64 right-64">
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
-                    </div>
-
-                    <div class="flex justify-end mt-6">
-                        <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button onclick="window.location.href='skin5.html'">
-                                <img src="/assets/img/png/prev.png" alt="">
-                            </button>
-                            
-                            <!-- Separator -->
-                            <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                            
-                            <button onclick="window.location.href='skin7.html'">
-                                <img src="/assets/img/png/next.png" alt="">
-                            </button>
+                    <form method="post">
+                        <div class="flex justify-center items-center">
+                            <img src="/assets/img/png/skin6.png" alt="Логотип" class="max-w-full h-auto">
                         </div>
-                    </div>
 
+                        <div class="absolute top-10 right-64">
+                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                            <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="1">
+                        </div>
+
+                        <div class="absolute top-32 left-96">
+                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                            <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="2">
+                        </div>
+
+                        <div class="absolute top-56 left-72">
+                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                            <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="3">
+                        </div>
+
+                        <div class="absolute top-64 left-96">
+                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                            <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="4">
+                        </div>
+
+                        <div class="absolute top-64 right-64">
+                            <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                            <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="5">
+                        </div>
+
+                        <div class="flex justify-end mt-6">
+                            <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                                <button onclick="window.location.href='skin5.html'">
+                                    <img src="/assets/img/png/prev.png" alt="">
+                                </button>
+                                
+                                <!-- Separator -->
+                                <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                                
+                                <button onclick="window.location.href='/skin7'">
+                                    <img src="/assets/img/png/next.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="absolute right-28 top-72">
