--- a/templates/chooseHairColor.html
+++ b/templates/chooseHairColor.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/output.css">
-    <link rel="stylesheet" href="./static/css/customStyles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <!-- Logo Section -->
         <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-            <img src="./static/assets/img/svg/logo.svg" alt="">
+            <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
         </div>
 
         <!-- Wrapper for Container and Stripes -->
@@ -22,66 +22,62 @@
             <!-- Main Container -->
             <div class="bg-customWhite p-8 shadow-md">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <!-- First Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
+                    <form method="post" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <!-- First Column -->
+                        <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
-                                <input type="checkbox" id="everyday1" name="everyday1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
+                                <input type="checkbox" id="everyday1" name="hair_color" value="blond">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday1">
                                 <label for="everyday1">Блонд</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday2')">
-                                <input type="checkbox" id="everyday2" name="everyday2">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
+                                <input type="checkbox" id="everyday2" name="hair_color" value="brunet">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday2">
                                 <label for="everyday2">Брюнет</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday3')">
-                                <input type="checkbox" id="everyday3" name="everyday3">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday3">
+                                <input type="checkbox" id="everyday3" name="hair_color" value="light_brown">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday3">
                                 <label for="everyday3">Русый</label>
                             </div>
+                        </div>
 
-                        </form>
-                    </div>
-
-                    <!-- Second Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
+                        <!-- Second Column -->
+                        <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('home1')">
-                                <input type="checkbox" id="home1" name="home1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home1">
+                                <input type="checkbox" id="home1" name="hair_color" value="gray">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home1">
                                 <label for="home1">Cедой</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home2')">
-                                <input type="checkbox" id="home2" name="home2">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home2">
+                                <input type="checkbox" id="home2" name="hair_color" value="dark_brown">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home2">
                                 <label for="home2">Шатен</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home3')">
-                                <input type="checkbox" id="home3" name="home3">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home3">
+                                <input type="checkbox" id="home3" name="hair_color" value="red">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home3">
                                 <label for="home3">Рыжий</label>
                             </div>
-
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='chooseDeatelnost.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
+                            <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='chooseSizeTopWoman.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
+                            <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
                         </button>
                     </div>
                 </div>
@@ -94,7 +90,7 @@
         </div>
 
         <div class="absolute right-28 top-72">
-            <img src="./static/assets/img/png/janna-full.png" alt="">
+            <img src="{{ url_for('static', filename='assets/img/png/janna-full.png') }}" alt="">
         </div>
 
     </div>
@@ -104,7 +100,9 @@
     const checkbox = document.getElementById(id);
     const img = document.getElementById(`img-${id}`);
     checkbox.checked = !checkbox.checked;
-    img.src = checkbox.checked ? './static/assets/img/svg/crystallActive.svg' : './static/assets/img/svg/crystall.svg';
+    img.src = checkbox.checked 
+        ? "{{ url_for('static', filename='assets/img/svg/crystallActive.svg') }}"
+        : "{{ url_for('static', filename='assets/img/svg/crystall.svg') }}";
 }
     </script>
 
