--- a/templates/chooseJeansForm.html
+++ b/templates/chooseJeansForm.html
@@ -3,24 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/output.css">
-        <link rel="stylesheet" href="./static/css/customStyles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
         <title>Document</title>
-</head>
-<body class="bg-gray-200">
+    </head>
+    <body class="bg-gray-200">
         <!-- Main Content -->
         <main class="flex items-center justify-center h-screen">
             <!-- Wrapper for Container and Stripes -->
             <div class="w-full max-w-4xl">
-
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="./static/assets/img/svg/logo.svg" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
-            
                     <div class="flex flex-col items-center mt-6">
-                    
                         <form id="jeansForm" method="POST">
                             <!-- Скрытое поле для хранения выбора -->
                             <input type="hidden" name="selectedJeans" id="selectedJeans">
@@ -66,36 +63,30 @@
                                     <span class="mt-2 text-sm text-center">Бойфренды</span>
                                 </div>
                             </div>
+                            
+                            <div class="flex justify-end mt-6">
+                                <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                                    <button type="submit" name="action" value="prev">
+                                        <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
+                                    </button>
+                                    
+                                    <!-- Separator -->
+                                    <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                                    
+                                    <button type="submit" name="action" value="next">
+                                        <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
+                                    </button>
+                                </div>
+                            </div>
                         </form>
-
                     </div>
-                    
-                    
-            
-                    <div class="flex justify-end mt-6">
-                        <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button onclick="window.location.href='skin10.html'">
-                                <img src="./static/assets/img/png/prev.png" alt="">
-                            </button>
-                            
-                            <!-- Separator -->
-                            <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                            
-                            <button onclick="window.location.href='chooseDeatelnost.html'">
-                                <img src="./static/assets/img/png/next.png" alt="">
-                            </button>
-                        </div>
-                    </div>
-            
                 </div>
 
                 <div class="absolute right-28 top-72">
-
                     <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
                         <p>Какая цветовая гамма вам ближе?</p>
                     </div>
-
-                    <img src="./static/assets/img/png/janna-skin10.png" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin10.png') }}" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
