--- a/templates/chooseJeansLenght.html
+++ b/templates/chooseJeansLenght.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/output.css">
-        <link rel="stylesheet" href="./static/css/customStyles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
         <title>Document</title>
 </head>
 <body class="bg-gray-200">
@@ -14,13 +14,13 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="./static/assets/img/svg/logo.svg" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
             
                     <div class="flex flex-col items-center mt-6">
-                        <form id="lengthForm" method="POST" action="/your-backend-endpoint">
+                        <form method="POST">
                             <!-- Скрытое поле для хранения множественного выбора -->
                             <input type="hidden" name="selectedLength" id="selectedLength">
                             
@@ -28,7 +28,7 @@
                                 <!-- Card 1 -->
                                 <div class="flex flex-col items-center">
                                     <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'short')" data-length-type="short">
-                                        <img src="./static/assets/img/png/lenght1.png" alt="Jeans 1" class="w-full h-full object-cover">
+                                        <img src="{{ url_for('static', filename='assets/img/png/lenght1.png') }}" alt="Jeans 1" class="w-full h-full object-cover">
                                     </div>
                                     <span class="mt-2 text-sm text-center">Укороченные</span>
                                 </div>
@@ -36,7 +36,7 @@
                                 <!-- Card 2 -->
                                 <div class="flex flex-col items-center">
                                     <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'standard')" data-length-type="standard">
-                                        <img src="./static/assets/img/png/lenght2.png" alt="Jeans 2" class="w-full h-full object-cover">
+                                        <img src="{{ url_for('static', filename='assets/img/png/lenght2.png') }}" alt="Jeans 2" class="w-full h-full object-cover">
                                     </div>
                                     <span class="mt-2 text-sm text-center">Стандартные</span>
                                 </div>
@@ -44,7 +44,7 @@
                                 <!-- Card 3 -->
                                 <div class="flex flex-col items-center">
                                     <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'long')" data-length-type="long">
-                                        <img src="./static/assets/img/png/lenght3.png" alt="Jeans 3" class="w-full h-full object-cover">
+                                        <img src="{{ url_for('static', filename='assets/img/png/lenght3.png') }}" alt="Jeans 3" class="w-full h-full object-cover">
                                     </div>
                                     <span class="mt-2 text-sm text-center">Длинные</span>
                                 </div>
@@ -56,15 +56,15 @@
             
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button onclick="window.location.href='skin10.html'">
-                                <img src="./static/assets/img/png/prev.png" alt="">
+                            <button type="submit" name="action" value="previous">
+                                <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
-                            <button onclick="window.location.href='chooseDeatelnost.html'">
-                                <img src="./static/assets/img/png/next.png" alt="">
+                            <button type="submit" name="action" value="next">
+                                <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
                             </button>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                         <p>Какая цветовая гамма вам ближе?</p>
                     </div>
 
-                    <img src="./static/assets/img/png/janna-skin10.png" alt="">
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin10.png') }}" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
