--- a/templates/choosePosadka.html
+++ b/templates/choosePosadka.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/output.css">
-        <link rel="stylesheet" href="./static/css/customStyles.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
         <title>Document</title>
 </head>
 <body class="bg-gray-200">
@@ -13,13 +13,13 @@
         <!-- Wrapper for Container and Stripes -->
         <div class="w-full max-w-4xl">
             <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                <img src="./static/assets/img/svg/logo.svg" alt="Logo">
+                <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="Logo">
             </div>
 
             <!-- Card Selection Section -->
             <div class="bg-customWhite p-8 shadow-md relative">
                 <div class="flex flex-col items-center mt-6">
-                    <form id="posadkaForm" method="POST" action="/your-backend-endpoint">
+                    <form id="posadkaForm" method="POST">
                         <!-- Скрытое поле для хранения множественного выбора -->
                         <input type="hidden" name="selectedPosadka" id="selectedPosadka">
                         
@@ -27,7 +27,7 @@
                             <!-- Card 1 -->
                             <div class="flex flex-col items-center">
                                 <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'high')" data-posadka-type="high">
-                                    <img src="./static/assets/img/png/jeansForm1.png" alt="High" class="w-full h-full object-cover">
+                                    <img src="{{ url_for('static', filename='assets/img/png/jeansForm1.png') }}" alt="High" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Высокая</span>
                             </div>
@@ -35,7 +35,7 @@
                             <!-- Card 2 -->
                             <div class="flex flex-col items-center">
                                 <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'medium')" data-posadka-type="medium">
-                                    <img src="./static/assets/img/png/jeansForm2.png" alt="Medium" class="w-full h-full object-cover">
+                                    <img src="{{ url_for('static', filename='assets/img/png/jeansForm2.png') }}" alt="Medium" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Средняя</span>
                             </div>
@@ -43,42 +43,42 @@
                             <!-- Card 3 -->
                             <div class="flex flex-col items-center">
                                 <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'low')" data-posadka-type="low">
-                                    <img src="./static/assets/img/png/jeansForm3.png" alt="Low" class="w-full h-full object-cover">
+                                    <img src="{{ url_for('static', filename='assets/img/png/jeansForm3.png') }}" alt="Low" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Низкая</span>
+                            </div>
+                        </div>
+
+                        <!-- Navigation Buttons -->
+                        <div class="flex justify-end mt-6">
+                            <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                                <button type="button" onclick="window.location.href='{{ url_for('skin10') }}'">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
+                                </button>
+                                
+                                <!-- Separator -->
+                                <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                                
+                                <button type="submit">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="Next">
+                                </button>
                             </div>
                         </div>
                     </form>
                 </div>
 
-                <!-- Navigation Buttons -->
-                <div class="flex justify-end mt-6">
-                    <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                        <button onclick="window.location.href='skin10.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="Previous">
-                        </button>
-                        
-                        <!-- Separator -->
-                        <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                        
-                        <button onclick="window.location.href='chooseDeatelnost.html'">
-                            <img src="./static/assets/img/png/next.png" alt="Next">
-                        </button>
+                <!-- Question Box -->
+                <div class="absolute right-28 top-72">
+                    <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
+                        <p>Какая посадка вам нравится?</p>
                     </div>
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin10.png') }}" alt="Janna">
                 </div>
-            </div>
 
-            <!-- Question Box -->
-            <div class="absolute right-28 top-72">
-                <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
-                    <p>Какая посадка вам нравится?</p>
-                </div>
-                <img src="./static/assets/img/png/janna-skin10.png" alt="Janna">
+                <!-- Stripes -->
+                <div class="w-full h-4 bg-customGreen"></div>
+                <div class="w-full h-8 bg-customBlack"></div>
             </div>
-
-            <!-- Stripes -->
-            <div class="w-full h-4 bg-customGreen"></div>
-            <div class="w-full h-8 bg-customBlack"></div>
         </div>
     </main>
 
