--- a/templates/chooseSizeTop.html
+++ b/templates/chooseSizeTop.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/output.css">
-    <link rel="stylesheet" href="./static/css/customStyles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
     <title>Document</title>
 </head>
 <body>
@@ -21,84 +21,72 @@
 
             <!-- Main Container -->
             <div class="bg-customWhite p-8 shadow-md">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <!-- First Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
-
+                <form method="post" class="space-y-2">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <!-- First Column -->
+                        <div>
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
-                                <input type="checkbox" name="everyday1" id="everyday1" name="everyday1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
+                                <input type="checkbox" name="size" id="everyday1" value="XXS">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday1">
                                 <label for="everyday1">XXS</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday2')">
                                 <input type="checkbox" name="everyday2" id="everyday2" name="everyday2">
                                 <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
                                 <label for="everyday2">XS</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday3')">
                                 <input type="checkbox" name="everyday3" id="everyday3" name="everyday3">
                                 <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday3">
                                 <label for="everyday3">S</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday4')">
                                 <input type="checkbox" name="everyday4" id="everyday4" name="everyday4">
                                 <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday4">
                                 <label for="everyday4">M</label>
                             </div>
+                        </div>
 
-                        </form>
-                    </div>
-
-                    <!-- Second Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
+                        <!-- Second Column -->
+                        <div>
                             <div class="checkbox-container" onclick="toggleCheckbox('home1')">
-                                <input type="checkbox" name="home1" id="home1" name="home1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home1">
+                                <input type="checkbox" name="size" id="home1" value="L">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home1">
                                 <label for="home1">L</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home2')">
                                 <input type="checkbox" name="home2" id="home2" name="home2">
                                 <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home2">
                                 <label for="home2">XL</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home3')">
                                 <input type="checkbox" name="home3" id="home3" name="home3">
                                 <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home3">
                                 <label for="home3">XXL</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home4')">
                                 <input type="checkbox" name="home4" id="home4" name="home4">
                                 <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home4">
                                 <label for="home4">3XL</label>
                             </div>
-
-                        </form>
+                        </div>
                     </div>
-                </div>
 
-                <div class="flex justify-end mt-6">
-                    <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                        <button onclick="window.location.href='previousPage.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
-                        </button>
-                        
-                        <!-- Separator -->
-                        <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                        
-                        <button onclick="window.location.href='confirmStyle.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
-                        </button>
+                    <div class="flex justify-end mt-6">
+                        <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                            <button type="button" onclick="window.location.href='{{ url_for('previous_page') }}'">
+                                <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
+                            </button>
+                            
+                            <!-- Separator -->
+                            <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                            
+                            <button type="submit">
+                                <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
+                            </button>
+                        </div>
                     </div>
-                </div>
-                
+                </form>
             </div>
 
             <!-- Green and Black Stripes -->
