--- a/templates/chooseSizeTopWoman.html
+++ b/templates/chooseSizeTopWoman.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/output.css">
-    <link rel="stylesheet" href="./static/css/customStyles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <!-- Logo Section -->
         <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-            <img src="./static/assets/img/svg/logo.svg" alt="">
+            <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
         </div>
 
         <!-- Wrapper for Container and Stripes -->
@@ -22,91 +22,86 @@
             <!-- Main Container -->
             <div class="bg-customWhite p-8 shadow-md">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <!-- First Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
-
+                    <form method="post" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <!-- First Column -->
+                        <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
-                                <input type="checkbox" name="everyday1" id="everyday1" name="everyday1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
+                                <input type="checkbox" name="size" id="everyday1" value="38">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday1">
                                 <label for="everyday1">38 (XXS)</label>
                             </div>
-                    
+                            
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday2')">
-                                <input type="checkbox" name="everyday2" id="everyday2" name="everyday2">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
+                                <input type="checkbox" name="size" id="everyday2" value="40">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday2">
                                 <label for="everyday2">40 (XXS / XS)</label>
                             </div>
-                    
+                            
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday3')">
-                                <input type="checkbox" name="everyday3" id="everyday3" name="everyday3">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday3">
+                                <input type="checkbox" name="size" id="everyday3" value="42">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday3">
                                 <label for="everyday3">42 (XS)</label>
                             </div>
-                    
+                            
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday4')">
-                                <input type="checkbox" name="everyday4" id="everyday4" name="everyday4">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday4">
+                                <input type="checkbox" name="size" id="everyday4" value="44">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday4">
                                 <label for="everyday4">44 (S)</label>
                             </div>
 
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday5')">
-                                <input type="checkbox" name="everyday5" id="everyday5" name="everyday5">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday5">
+                                <input type="checkbox" name="size" id="everyday5" value="46">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday5">
                                 <label for="everyday4">46 (M)</label>
                             </div>
+                        </div>
 
-                        </form>
-                    </div>
-
-                    <!-- Second Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
+                        <!-- Second Column -->
+                        <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('home1')">
-                                <input type="checkbox" name="home1" id="home1" name="home1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home1">
+                                <input type="checkbox" name="size" id="home1" value="48">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home1">
                                 <label for="home1">48 (M / L)</label>
                             </div>
-                    
+                            
                             <div class="checkbox-container" onclick="toggleCheckbox('home2')">
-                                <input type="checkbox" name="home2" id="home2" name="home2">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home2">
+                                <input type="checkbox" name="size" id="home2" value="50">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home2">
                                 <label for="home2">50 (L)</label>
                             </div>
-                    
+                            
                             <div class="checkbox-container" onclick="toggleCheckbox('home3')">
-                                <input type="checkbox" name="home3" id="home3" name="home3">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home3">
+                                <input type="checkbox" name="size" id="home3" value="52">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home3">
                                 <label for="home3">52(XL)</label>
                             </div>
-                    
+                            
                             <div class="checkbox-container" onclick="toggleCheckbox('home4')">
-                                <input type="checkbox" name="home4" id="home4" name="home4">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home4">
+                                <input type="checkbox" name="size" id="home4" value="54">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home4">
                                 <label for="home4">54 (XL)</label>
                             </div>
 
                             <div class="checkbox-container" onclick="toggleCheckbox('home5')">
-                                <input type="checkbox" name="home5" id="home5" name="home5">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home5">
+                                <input type="checkbox" name="size" id="home5" value="56">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home5">
                                 <label for="home4">56 (XXL)</label>
                             </div>
-
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='chooseHairColor.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
+                            <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='chooseSizeBottomWoman.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
+                            <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
                         </button>
                     </div>
                 </div>
@@ -119,7 +114,7 @@
         </div>
 
         <div class="absolute right-28 top-72">
-            <img src="./static/assets/img/png/janna-full.png" alt="">
+            <img src="{{ url_for('static', filename='assets/img/png/janna-full.png') }}" alt="">
         </div>
 
     </div>
@@ -129,7 +124,9 @@
     const checkbox = document.getElementById(id);
     const img = document.getElementById(`img-${id}`);
     checkbox.checked = !checkbox.checked;
-    img.src = checkbox.checked ? './static/assets/img/svg/crystallActive.svg' : './static/assets/img/svg/crystall.svg';
+    img.src = checkbox.checked 
+        ? "{{ url_for('static', filename='assets/img/svg/crystallActive.svg') }}"
+        : "{{ url_for('static', filename='assets/img/svg/crystall.svg') }}";
 }
     </script>
 
