--- a/templates/chooseWork.html
+++ b/templates/chooseWork.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/output.css">
-    <link rel="stylesheet" href="./static/css/customStyles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <!-- Logo Section -->
         <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-            <img src="./static/assets/img/svg/logo.svg" alt="">
+            <img src="{{ url_for('static', filename='assets/img/svg/logo.svg') }}" alt="">
         </div>
 
         <!-- Wrapper for Container and Stripes -->
@@ -22,112 +22,96 @@
             <!-- Main Container -->
             <div class="bg-customWhite p-8 shadow-md">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <!-- First Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
+                    <form method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <!-- First Column -->
+                        <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
-                                <input type="checkbox" id="everyday1" name="everyday1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
+                                <input type="checkbox" id="everyday1" name="professions" value="Маркетолог">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday1">
                                 <label for="everyday1">Маркетолог</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday2')">
-                                <input type="checkbox" id="everyday2" name="everyday2">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
+                                <input type="checkbox" id="everyday2" name="professions" value="Менеджер">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday2">
                                 <label for="everyday2">Менеджер</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday3')">
-                                <input type="checkbox" id="everyday3" name="everyday3">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday3">
+                                <input type="checkbox" id="everyday3" name="professions" value="Финансист">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday3">
                                 <label for="everyday3">Финансист</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday4')">
-                                <input type="checkbox" id="everyday4" name="everyday4">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday4">
+                                <input type="checkbox" id="everyday4" name="professions" value="Медиа и коммуникации">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday4">
                                 <label for="everyday4">Медиа и коммуникации</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday5')">
-                                <input type="checkbox" id="everyday5" name="everyday5">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday5">
+                                <input type="checkbox" id="everyday5" name="professions" value="Искусство / творчество">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday5">
                                 <label for="everyday5">Искусство / творчество</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday6')">
-                                <input type="checkbox" id="everyday6" name="everyday6">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday6">
+                                <input type="checkbox" id="everyday6" name="professions" value="Юрист">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-everyday6">
                                 <label for="everyday6">Юрист</label>
                             </div>
+                        </div>
 
-                        </form>
-                    </div>
-
-                    <!-- Second Column with Custom Checkboxes -->
-                    <div>
-                        <form class="space-y-2">
+                        <!-- Second Column -->
+                        <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('home1')">
-                                <input type="checkbox" id="home1" name="home1">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home1">
+                                <input type="checkbox" id="home1" name="professions" value="Инженер">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home1">
                                 <label for="home1">Инженер</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home2')">
-                                <input type="checkbox" id="home2" name="home2">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home2">
+                                <input type="checkbox" id="home2" name="professions" value="Студент">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home2">
                                 <label for="home2">Студент</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home3')">
-                                <input type="checkbox" id="home3" name="home3">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home3">
+                                <input type="checkbox" id="home3" name="professions" value="Дизайнер">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home3">
                                 <label for="home3">Дизайнер</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home4')">
-                                <input type="checkbox" id="home4" name="home4">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home4">
+                                <input type="checkbox" id="home4" name="professions" value="IT">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home4">
                                 <label for="home4">IT</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home5')">
-                                <input type="checkbox" id="home5" name="home5">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home5">
+                                <input type="checkbox" id="home5" name="professions" value="Врач / Медицинский сотрудник">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home5">
                                 <label for="home5">Врач / Медицинский сотрудник</label>
                             </div>
-                    
                             <div class="checkbox-container" onclick="toggleCheckbox('home6')">
-                                <input type="checkbox" id="home6" name="home6">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home6">
+                                <input type="checkbox" id="home6" name="professions" value="Ресторанный бизнес">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home6">
                                 <label for="home6">Ресторанный бизнес</label>
                             </div>
-
                             <div class="checkbox-container" onclick="toggleCheckbox('home7')">
-                                <input type="checkbox" id="home7" name="home7">
-                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home7">
+                                <input type="checkbox" id="home7" name="professions" value="Личный помощник">
+                                <img src="{{ url_for('static', filename='assets/img/svg/crystall.svg') }}" alt="Unchecked" class="checkbox-image" id="img-home7">
                                 <label for="home7">Личный помощник</label>
                             </div>
+                        </div>
 
-                        </form>
-                    </div>
+                        <!-- Navigation Buttons -->
+                        <div class="flex justify-end mt-6 md:col-span-2">
+                            <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
+                                <button type="button" onclick="window.location.href='{{ url_for('previousPage') }}'">
+                                    <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="">
+                                </button>
+                                
+                                <div class="w-1 h-8 bg-customBlack mx-2"></div>
+                                
+                                <button type="submit">
+                                    <img src="{{ url_for('static', filename='assets/img/png/next.png') }}" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-
-                <div class="flex justify-end mt-6">
-                    <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                        <button onclick="window.location.href='previousPage.html'">
-                            <img src="./static/assets/img/png/prev.png" alt="">
-                        </button>
-                        
-                        <!-- Separator -->
-                        <div class="w-1 h-8 bg-customBlack mx-2"></div>
-                        
-                        <button onclick="window.location.href='confirmStyle.html'">
-                            <img src="./static/assets/img/png/next.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                
             </div>
 
             <!-- Green and Black Stripes -->
@@ -136,7 +120,7 @@
         </div>
 
         <div class="absolute right-28 top-72">
-            <img src="./static/assets/img/png/edick-full.png" alt="">
+            <img src="{{ url_for('static', filename='assets/img/png/edick-full.png') }}" alt="">
         </div>
 
     </div>
@@ -146,7 +130,9 @@
     const checkbox = document.getElementById(id);
     const img = document.getElementById(`img-${id}`);
     checkbox.checked = !checkbox.checked;
-    img.src = checkbox.checked ? './static/assets/img/svg/crystallActive.svg' : './static/assets/img/svg/crystall.svg';
+    img.src = checkbox.checked 
+        ? "{{ url_for('static', filename='assets/img/svg/crystallActive.svg') }}"
+        : "{{ url_for('static', filename='assets/img/svg/crystall.svg') }}";
 }
     </script>
 
